# scion

./: go.mod  go.sum  go_deps.bzl  scion.sh
go/dispatcher/: main.go
go/dispatcher/dispatcher/: dispatcher.go
go/dispatcher/network/: dispatcher.go
go/lib/underlay/conn/: BUILD.bazel  base.go  conn.go  init.go  ts_test.go  util.go  v4.go  v6.go
go/pkg/router/: dataplane.go
go/pkg/router/mock_router/: mock.go
scripts/: buildmin.sh  buildmin_noregen.sh  findsup.sh  killsup.sh  restartsup.sh
tools/: dc
