load("//lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "base.go",
        "init.go",
        "util.go",
        "v4.go",
        "v6.go",
    ],
    importpath = "github.com/scionproto/scion/go/lib/underlay/conn",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/log:go_default_library",
        "//go/lib/serrors:go_default_library",
        "//go/lib/slayers:go_default_library",
        "//go/lib/slayers/path/scion:go_default_library",
        "//go/lib/sockctrl:go_default_library",
        "@com_github_google_gopacket//:go_default_library",
        "@org_golang_x_net//ipv4:go_default_library",
        "@org_golang_x_net//ipv6:go_default_library",
        "@org_golang_x_sys//unix:go_default_library",
    ] + select({
        "@io_bazel_rules_go//go/platform:android": [
            "//go/lib/common:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//go/lib/common:go_default_library",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "go_default_test",
    srcs = ["ts_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
